# NITR

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cases/: CMakeLists.txt
cases/001.add-no-callsite-spread/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/001.add-no-callsite-spread/app/: main.cc
cases/001.add-no-callsite-spread/src/: add.cc  add.h
cases/004.cv-srp/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/004.cv-srp/app/: main.cc
cases/004.cv-srp/src/: estimator.h  estimator_e.cc  io_json.cc  io_json.h  legacy_monolith.cc  legacy_monolith.h  math_linalg.cc  math_linalg.h  math_sampson.cc  math_sampson.h  normalize.cc  normalize.h  pipeline.cc  pipeline.h  policy.cc  policy.h  scoring.cc  scoring.h  types.h
cases/005.pricing-ocp/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md  TASK4.md
cases/005.pricing-ocp/app/: main.cc
cases/005.pricing-ocp/src/: pricing.cc  pricing.h
cases/006.gs-isp/: CMakeLists.txt  TASK.md
cases/006.gs-isp/app/: main.cc
cases/006.gs-isp/src/: composite.cc  composite.h  eval_shading.cc  eval_shading.h  hit_buffer.h  pipeline.cc  pipeline.h  project_and_bin.cc  project_and_bin.h  sort_hits.cc  sort_hits.h  types.h
cases/007.ml-lsp-multistep/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/007.ml-lsp-multistep/app/: main.cc
cases/007.ml-lsp-multistep/src/: clamp_transform.cc  clamp_transform.h  feature_pipeline.cc  feature_pipeline.h  feature_transform.h  identity_transform.cc  identity_transform.h  l2_normalize_transform.cc  l2_normalize_transform.h  transform_batch.cc  transform_batch.h  transform_chain.cc  transform_chain.h  transform_factory.cc  transform_factory.h
cases/009.session-expiry-testability/: CMakeLists.txt  TASK.md
cases/009.session-expiry-testability/app/: main.cc
cases/009.session-expiry-testability/src/: session_manager.cc  session_manager.h  time_source.cc  time_source.h
cases/010.logging-side-effects/: CMakeLists.txt  TASK.md
cases/010.logging-side-effects/app/: main.cc
cases/010.logging-side-effects/src/: applicant.h  audit_logger.cc  audit_logger.h  loan_policy.cc  loan_policy.h  loan_review_service.cc  loan_review_service.h
cases/011.config-sprawl/: CMakeLists.txt  TASK.md
cases/011.config-sprawl/app/: main.cc
cases/011.config-sprawl/src/: report_renderer.cc  report_renderer.h  report_types.cc  report_types.h
cases/012.cache-lifecycle/: CMakeLists.txt  TASK.md
cases/012.cache-lifecycle/app/: main.cc
cases/012.cache-lifecycle/src/: inventory_report_service.cc  inventory_report_service.h  product.h  summary_engine.cc  summary_engine.h
cases/013.stable-public-api/: CMakeLists.txt  TASK.md
cases/013.stable-public-api/app/: main.cc
cases/013.stable-public-api/src/: library_catalog.cc  library_catalog.h
cases/014.report-export-ocp/: CMakeLists.txt  TASK.md
cases/014.report-export-ocp/app/: main.cc
cases/014.report-export-ocp/src/: csv_report_exporter.cc  csv_report_exporter.h  exporter_factory.cc  exporter_factory.h  report.h  report_export_service.cc  report_export_service.h  report_exporter.h  text_report_exporter.cc  text_report_exporter.h
cases/015.pipeline-provider-decoupling/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/015.pipeline-provider-decoupling/app/: main.cc
cases/015.pipeline-provider-decoupling/src/: build_pipeline.cc  build_pipeline.h  event.h  file_policy_provider.cc  file_policy_provider.h  pipeline_config.h  pipeline_runner.cc  pipeline_runner.h  policy.h  policy_provider.h  static_policy_provider.cc  static_policy_provider.h
cases/016.device-segment-planner/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/016.device-segment-planner/app/: main.cc
cases/016.device-segment-planner/src/: device_kind.h  execution_plan.cc  execution_plan.h  pipeline_config.cc  pipeline_config.h  pipeline_runner.cc  pipeline_runner.h
cases/017.active-snapshot-lifecycle/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/017.active-snapshot-lifecycle/app/: main.cc
cases/017.active-snapshot-lifecycle/src/: query_result.h  query_service.cc  query_service.h  snapshot.h  snapshot_store.cc  snapshot_store.h
cases/018.seeded-selection-testability/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/018.seeded-selection-testability/app/: main.cc
cases/018.seeded-selection-testability/src/: candidate.h  rules.cc  rules.h  sampler_v1.cc  sampler_v1.h  selector.cc  selector.h
cases/019.ranking-explainability-boundary/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/019.ranking-explainability-boundary/app/: main.cc
cases/019.ranking-explainability-boundary/src/: item.h  ranker.cc  ranker.h  ranking_result.h
cases/020.handover-packet-ownership-boundary/: CMakeLists.txt  TASK.md
cases/020.handover-packet-ownership-boundary/app/: main.cc
cases/020.handover-packet-ownership-boundary/src/: handover_packet.cc  handover_packet.h  handover_packet_preview.cc  handover_packet_preview.h  handover_packet_writer.cc  handover_packet_writer.h  shift_tracker.cc  shift_tracker.h
cases/021.inline-filter-entrypoint-reuse/: CMakeLists.txt  TASK.md
cases/021.inline-filter-entrypoint-reuse/app/: main.cc
cases/021.inline-filter-entrypoint-reuse/src/: filter_clause.h  filter_parser.cc  filter_parser.h  filter_rule.cc  filter_rule.h  filter_validation.cc  filter_validation.h
docs/: design_matrix.md  needle_in_the_repo_case_template.md
docs/001.add-no-callsite-spread/: SPEC.md
docs/002.refactor-and-resue/: SPEC.md
docs/003.reuse-existing-code/: SPEC.md
docs/004.cv-srp/: SPEC.md
docs/005.pricing-ocp/: SPEC.md
docs/006.gs-isp/: SPEC.md
docs/007.ml-lsp-multistep/: SPEC.md
docs/008.map-dip/: SPEC.md
docs/009.session-expiry-testability/: SPEC.md
docs/010.logging-side-effects/: SPEC.md
docs/011.config-sprawl/: SPEC.md
docs/012.cache-lifecycle/: SPEC.md
docs/013.stable-public-api/: SPEC.md
docs/014.report-export-ocp/: SPEC.md
docs/015.pipeline-provider-decoupling/: SPEC.md
docs/016.device-segment-planner/: SPEC.md
evaluator/: CMakeLists.txt
tools/: run_case.py
(+131 files in other folders)
